# meltria-analyzer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release-tsdr.yaml  release.yaml  test.yaml
conf/diagnoser/: tsdr
conf/tsdr/: config.yaml
conf/tsdr/step1/: ar_based_ad.yaml  df.yaml
conf/tsdr/step2/: default.yaml
diag_cause/: diag.py
diagnoser/: PC.py  diag.py  metric_node.py  nx_util.py
diagnoser/citest/: pearsonar.py  pearsonr.py
eval/: README.md  groundtruth.py  priorknowledge.py
eval/conf/dataset/: config.yaml
eval/conf/diagnoser/: config.yaml
eval/conf/tsdr/: config.yaml
eval/conf/tsdr/step1/: ar_based_ad.yaml  cv.yaml  differencial_of_anomaly_score_model.yaml  fluxinfer.yaml  hist_and_stationality.yaml  hotteling_t2.yaml  jenkspy_and_ar_model.yaml  residual_integral.yaml  sst.yaml  two_samp_test.yaml  unit_root_test.yaml
eval/conf/tsdr/step2/: dbscan.yaml  default.yaml  (+1 more)
lib/: metrics.py
meltria/: loader.py
notebooks/: 2samp_test.ipynb  anomaly_collections.ipynb  ar-based-ad.ipynb  ar-based-ad_with_smoothing.ipynb  c-front-end_cpu_user_seconds_total.eps  c-user-db_cpu_user_seconds_total.eps  caural_graph_visualization.ipynb  causal_graph_visualization.ipynb  change_start_point_and_ad.ipynb  changepoint.ipynb  diagnose_clustering_issue.ipynb  eval_dataset.ipynb  fluxinfer_ad.ipynb  fluxrank_clustering.ipynb  investigate_ar-based-ad_issue.ipynb  investigate_ci_test_pc.ipynb  kpsstest.ipynb  liner_trend.ipynb  phase0_evaluation.ipynb  residual_integral.ipynb  slo_metrics.ipynb  srenext2022.ipynb  structual_break.ipynb  testcases_of_sockshop.ipynb  tigramite.ipynb  verify_adf_test.ipynb
tests/: test_tsdr_stationality.py  test_tsdr_univariate.py
tests/diagnoser/: test_diag.py
tests/eval/: test_groundtruth.py  test_metric_node.py
tests/lib/: test_metrics.py
tests/tsdr/: test_tsdr.py
tests/tsdr/outlierdetection/: test_ar.py  test_knn.py
tools/: check_tsdr_metrics.py  eval_diagnoser.py  eval_tsdr.py  get_datapoints_from_metrics_file.py  tsdr_combine_params.py  verify_meltria_metrics.py  verify_metrics.py  verify_tsdr_univariate_model.py
tsdr/: tsdr.py  unireducer.py
tsdr/clustering/: dbscan.py  kshape.py  metricsnamecluster.py  sbd.py
tsdr/outlierdetection/: ar.py  fluxinfer.py  knn.py  n_sigma_rule.py  residual_integral.py
tsdr/testseries/: sockshop.py
tsdr/util/: util.py
