[tool.poetry]
name = "terrrarium-analyzer"
version = "0.1.0"
description = ""
authors = ["tsurubee","yuuk1"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.0"
scipy = "^1.6.3"
fastdtw = "^0.3.4"
scikit-learn = "^0.24.2"
pandas = "^1.2.5"
statsmodels = "^0.12.2"
matplotlib = "^3.4.2"
pcalg = "^0.2.0"
ipython = "^7.25.0"
pygraphviz = "^1.7"
pgmpy = "^0.1.15"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

