[tool.poetry]
name = "meltria-analyzer"
version = "0.1.0"
description = ""
authors = ["tsurubee","yuuk1"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.0"
scipy = "v1.8.0"
fastdtw = "^0.3.4"
scikit-learn = "1.0.2"
pandas = "^1.2.5"
statsmodels = "0.13.2"
matplotlib = "^3.4.2"
pcalg = "^0.2.0"
ipython = "^7.25.0"
pygraphviz = "^1.7"
pgmpy = "^0.1.15"
Jinja2 = "^3.0.1"
ruptures = "^1.1.4"
arch = "^5.0.1"
neptune-client = "^0.14.3"
pymannkendall = "^1.4.2"
pyhomogeneity = "^1.1"
pmdarima = "^1.8.4"
banpei = "^0.1.2"
hydra-core = "^1.1.1"
pyvis = "^0.1.9"
bokeh = "^2.4.2"
holoviews = "^1.14.8"
panel = "^0.12.6"
tigramite = "^5.0.1"
tsmoothie = "^1.0.4"
jenkspy = "^0.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
ipykernel = "^6.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
